--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "zustand": "^4.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
