--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vite": "^5.4.10",
     "vitest": "^2.1.3",
     "@vitest/coverage-v8": "^2.1.3",
-    "@playwright/test": "^1.48.2"
+    "@playwright/test": "^1.48.2",
+    "@axe-core/playwright": "^4.10.0"
   }
 }
