--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint .",
     "test": "vitest run",
     "test:ui": "vitest",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "prepare": "husky install",
+    "precommit:lint": "lint-staged"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -44,6 +46,16 @@
     "vitest": "^2.1.3",
     "@vitest/coverage-v8": "^2.1.3",
     "@playwright/test": "^1.48.2",
-    "@axe-core/playwright": "^4.10.0"
+    "@axe-core/playwright": "^4.10.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,md,yml,yaml}": [
+      "prettier --write"
+    ],
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ]
   }
 }
