--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "vitest run",
     "test:ui": "vitest",
     "e2e": "playwright test",
-    "prepare": "husky install",
+    "prepare": "husky",
     "precommit:lint": "lint-staged"
   },
   "dependencies": {
