--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "test": "vitest run",
     "test:ui": "vitest",
     "e2e": "playwright test",
-    "prepare": "husky install",
-    "precommit:lint": "lint-staged"
+    "prepare": "husky",
+    "precommit:lint": "lint-staged",
+    "security": "npm run security:audit && npm run security:osv",
+    "security:audit": "npm audit",
+    "security:fix": "npm audit fix",
+    "security:osv": "npx osv-scanner -r ."
   },
   "dependencies": {
     "react": "^18.3.1",
