--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "security": "npm run security:audit && npm run security:osv",
     "security:audit": "npm audit",
     "security:fix": "npm audit fix",
-    "security:osv": "npx osv-scanner -r ."
+    "security:osv": "node scripts/osv-scan.js"
   },
   "dependencies": {
     "react": "^18.3.1",
