--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "typecheck": "tsc -b --noEmit",
-    "lint": "eslint .",
+    "lint": "eslint . --config eslint.config.js",
     "test": "vitest run",
     "test:ui": "vitest",
     "e2e": "playwright test",
@@ -59,7 +59,7 @@
       "prettier --write"
     ],
     "*.{ts,tsx,js,jsx}": [
-      "eslint --fix"
+      "eslint --config eslint.config.js --fix"
     ]
   }
 }
