--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "composite": true
   },
   "include": ["src"]
 }
