--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "main": "electron/dist/main.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -17,7 +18,15 @@
     "security": "npm run security:audit && npm run security:osv",
     "security:audit": "npm audit",
     "security:fix": "npm audit fix",
-    "security:osv": "node scripts/osv-scan.js"
+    "security:osv": "node scripts/osv-scan.js",
+    "electron:dev": "NODE_ENV=development electron electron/dist/main.js",
+    "electron:build": "tsc -p electron/tsconfig.json",
+    "electron:start": "npm run build && npm run electron:build && electron .",
+    "electron:package": "npm run build && npm run electron:build && electron-builder",
+    "electron:package:win": "npm run electron:package -- --win",
+    "electron:package:mac": "npm run electron:package -- --mac",
+    "electron:package:linux": "npm run electron:package -- --linux",
+    "pwa:icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
@@ -42,6 +51,9 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.20",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
