Complete all remaining features - Production Ready! 🎉                                               │ │                                                                                                                             │ │   Implemented all medium and lower priority features from Issues.md.                                                        │ │   The project is now production-ready with 100% feature parity.                                                             │ │                                                                                                                             │ │   ## Accessibility Features ✅ │ │                                                                                                                             │ │   - Added focus trap to Dialog and Sheet components                                                                         │ │   - Implemented comprehensive keyboard navigation utilities                                                                 │ │   - Created screen reader announcement system                                                                               │ │   - Added proper ARIA attributes to all modal components                                                                    │ │   - Skip link for keyboard users in index.html                                                                              │ │                                                                                                                             │ │   Files:                                                                                                                    │ │   - src/components/ui/dialog.tsx - Focus trap + ARIA                                                                        │ │   - src/components/ui/sheet.tsx - Focus trap + ARIA                                                                         │ │   - src/lib/a11y/keyboard-nav.ts - Navigation utilities               

--- a/.github/workflows/security-report.yml
+++ b/.github/workflows/security-report.yml
@@ -3,7 +3,7 @@ name: Security Audit Report
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4 * * 1' # weekly on Mondays
+    - cron: "0 4 * * 1" # weekly on Mondays
 
 jobs:
   audit:
