--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,11 +2,11 @@ name: Security
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   schedule:
-    - cron: '0 3 * * 1' # weekly on Mondays
+    - cron: "0 3 * * 1" # weekly on Mondays
 
 jobs:
   npm-audit:
